--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site
-title:              Moon
-bio:                'Minimal, one column jekyll theme.'
-description:        "Moon is a minimal, one column jekyll theme for your blog."
+title:              Kevin Troxell
+bio:                'Solving problems and storytelling with data.'
+description:        "...What?..."
 reading_time:       true
 words_per_minute:   200
 logo:               'assets/img/logo.png'
