editing background and urls

--- a/_config.yml
+++ b/_config.yml
@@ -37,17 +37,17 @@ disqus_shortname:   taylantatli
   #ad-client:
   #ad-slot:
 #bing-verify:
-email: kevin.a.troxell@gmail.com
+#email: kevin.a.troxell@gmail.com
 #twitter:            username
 #facebook:           username
-github-url:         https://github.com/kevin-troxell
+github-url:         kevin-troxell
 #stackoverflow:     123456/username   from a "http://stackoverflow.com/users/123456/username" link
-linkedin:          Kevin Troxell
+linkedin:          kevin-troxell-6371b494
 #xing:              username
 #instagram:          username
 #lastfm:            username
 #tumblr:            username
-medium:            '@username'
+medium:            @kevin-troxell
 #pinterest:         username
 #foursquare:        username
 #steam:              username
