--- a/_config.yml
+++ b/_config.yml
@@ -47,7 +47,7 @@ linkedin:          kevin-troxell-6371b494
 #instagram:          username
 #lastfm:            username
 #tumblr:            username
-medium:            @kevin-troxell
+medium:            "@kevin-troxell"
 #pinterest:         username
 #foursquare:        username
 #steam:              username
